# automatdeck-agent

./: .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE  README.md  build.sh  install.sh  push.sh  rust_version.txt
.github/workflows/: integration_checks.yml  release.yml
cloud_lib/: Cargo.toml
cloud_lib/src/aws/: s3.rs
config/: settings.toml
core_lib/: Cargo.toml
core_lib/src/: encryption.rs  error.rs  feedback.rs  httpclient.rs  jobconfiguration.rs  lib.rs  license.rs  moduleexecutor.rs  request.rs  settings.rs
core_lib/src/cloud/: aws.rs  mod.rs
core_lib/src/cloud/aws_config/: s3.rs
core_lib/src/tests/: encryption.rs  feedback.rs  licence.rs  mod.rs
daemon/: Cargo.toml
daemon/src/: args.rs  diagnosis.rs  initiator.rs  main.rs
keys/: ag-agent-public-key.pem  private-key.pem
modules/: example.py
src/: main.rs  settings.rs
