[package]
name = "core_lib"
version = "0.1.0"
authors = ["kheshavsewnundun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
serde_derive = "^1.0.8"
serde_json = "1.0.59"
serde = "^1.0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
log = "0.4.14"
backtrace = "0.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
derive-getters = "0.2.0"
json = "0.12.4"
#executor = "0.8"
os_pipe = "0.9.2"
rsa = "0.5.0"
rand = "0.8.4"
digest = "0.9.0"
sha2 = "0.9.5"
base64 = "0.13.0"
htmlescape = "0.3.1"
openssl = { version = "0.10.32", features = ["vendored"] }
chrono = "0.4.19"

[dev-dependencies]
tokio-test = "0.4.2"
