[package]
name = "ad-agent"
version = "0.1.0"
authors = ["kheshavsewnundun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
serde_derive = "^1.0.8"
serde_json = "1.0.59"
serde = "^1.0.8"
log = "0.4.14"
log4rs = "1.0.0"
core_lib = { path = "../core_lib"}
tokio = { version = "1", features = ["full"] }
