[package]
name = "ad-agent"
version = "0.1.0"
authors = ["kheshavsewnundun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11"
serde_derive = "^1.0.8"
serde_json = "1.0.59"
serde = "^1.0.8"
log = "0.4.14"
log4rs = "1.0.0"
core_lib = { path = "../core_lib"}
tokio = { version = "1", features = ["full"] }
signal-hook = "0.3.9"
derive-getters = "0.2.0"
#crossbeam = "0.8.1"
#crossbeam-utils = "0.8"
#futures = "0.3.15"
#executor = "0.8"
json = "0.12.4"
clap = { version = "3.1.8", features = ["derive"] }
cli-table = "0.4.6"
colored = "2.0.0"
